# SIO

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md
.github/: CONTRIBUTING.md
.github/scripts/: compile_and_test.sh
.github/workflows/: Linux-clang.yml  Linux-gcc.yml  Windows.yml  linux.yml  macOS.yml
.travis-ci.d/: compile_and_test.sh  coverity_scan.sh
cmake/: CheckAssembler.cmake  CheckIntrinsics.cmake  Doxyfile.in  OptimizeForArchitecture.cmake  SIOBuild.cmake  SIOConfig.cmake.in  SIOConfigVersion.cmake.in  SIOCreateConfig.cmake  SIOModules.cmake  ilcsoft_default_cxx_flags.cmake
doc/: CMakeLists.txt  Doxyfile  ReleaseNotes.md
sio/: CMakeLists.txt
sio/examples/: CMakeLists.txt
sio/examples/common/include/sioexamples/: blocks.h  data.h
sio/examples/simple/: Readme.md  simple_write.cc
sio/include/sio/: api.h  block.h  buffer.h  compression.h  definitions.h  exception.h  helpers.h  io_device.h  memcpy.h  version.h
sio/include/sio/compression/: zlib.h
sio/include/sio/details/: api_impl.h  block_impl.h  buffer_impl.h  compression_impl.h  exception_impl.h  helpers_impl.h  io_device_impl.h  memcpy_impl.h  version_impl.h
sio/main/: sio-dump-detailed.cc  sio-dump.cc
sio/src/: api.cc  buffer.cc
sio/tests/: test_exception.cc
source/: CMakeLists.txt  sio_module.ixx
source/examples/: CMakeLists.txt
source/examples/common/include/sioexamples/: blocks.h  data.h
source/examples/relocation/: Readme.md  relocation_read.cc  relocation_write.cc
source/examples/simple/: simple_read.cc  simple_write.cc
source/examples/zlib/: Readme.md  zlib_read.cc  zlib_write.cc
source/include/sio/: api.h  buffer.h  definitions.h  io_device.h  memcpy.h  version.h
source/include/sio/compression/: zlib.h
source/main/: sio-dump-detailed.cc  sio-dump.cc
source/src/: api.cc  block.cc  buffer.cc  io_device.cc  memcpy.cc
source/src/compression/: zlib.cc
source/tests/: test_exception.cc
zlib/: CMakeLists.txt
